Add Yocto build workflow and configuration

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,3 +20,7 @@ jobs:
       run: cmake --build build --config Release
     - name: Test
       run: ctest --test-dir build --output-on-failure -C Release
+    - name: Yocto Build
+      run: |
+        source yocto/poky/oe-init-build-env yocto/build
+        bitbake rust-spray-image
