--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,8 +2,8 @@ name: Build & Release (Windows MSI)
 
 on:
   push:
-    branches: [main]     # build every commit on main
-    tags:     ['*']      # build every tag (e.g. v1.2.0)
+    branches: [main]     # build every commit to main
+    tags:     ['*']      # and every tag, e.g. v1.3.0
   workflow_dispatch:
     inputs:
       version:
@@ -13,14 +13,13 @@ on:
 
 permissions:
   contents: read
-  packages: read         # needed if you pull/push GHCR images elsewhere
-  # ↑ keeping packages:read is handy if you ever add docker steps
+  packages: read          # handy if you later push/pull GHCR images
 
 jobs:
   msi:
     runs-on: windows-latest
 
-    # Resolve RELEASE_VERSION once, usable in every step
+    # Resolve once, re-use everywhere
     env:
       RELEASE_VERSION: >-
         ${{ github.event_name == 'workflow_dispatch'
@@ -30,19 +29,19 @@ jobs:
             || github.sha }}
 
     steps:
-    # ------------------------------
-    # 1. Fetch source
-    # ------------------------------
+    # ----------------------------------------------------------
+    # 1. Check out the source
+    # ----------------------------------------------------------
     - uses: actions/checkout@v4
 
-    # ------------------------------
+    # ----------------------------------------------------------
     # 2. MSBuild / toolchain for CMake
-    # ------------------------------
+    # ----------------------------------------------------------
     - uses: microsoft/setup-msbuild@v1.1
 
-    # ------------------------------
-    # 3. Configure + build
-    # ------------------------------
+    # ----------------------------------------------------------
+    # 3. Configure & build gcode_gen.exe
+    # ----------------------------------------------------------
     - name: Configure CMake
       shell: pwsh
       run: cmake -B build -DCMAKE_BUILD_TYPE=Release
@@ -51,44 +50,47 @@ jobs:
       shell: pwsh
       run: cmake --build build --config Release
 
-    # ------------------------------
+    # ----------------------------------------------------------
     # 4. Prepare dist folder (robust)
-    # ------------------------------
+    # ----------------------------------------------------------
     - name: Prepare dist folder
       shell: pwsh
       run: |
         Remove-Item -Recurse -Force dist -ErrorAction SilentlyContinue
         New-Item -ItemType Directory -Path dist | Out-Null
 
-    # ------------------------------
+    # ----------------------------------------------------------
     # 5. Install WiX v4 CLI
-    # ------------------------------
+    # ----------------------------------------------------------
     - name: Install WiX Toolset
       shell: pwsh
       run: dotnet tool install --global wix --version 4.*
 
-    # ------------------------------
+    # ----------------------------------------------------------
     # 6. Build the MSI
-    # ------------------------------
+    # ----------------------------------------------------------
     - name: Pack MSI
       shell: pwsh
       run: |
-        wix build wix/installer.wxs `
+        $buildDir = "${{ github.workspace }}\build\src\gcode_gen\Release"
+        wix build wix\installer.wxs `
+                 -dVersion=${{ env.RELEASE_VERSION }} `
+                 -dBuildDir="$buildDir" `
                  -arch x64 `
-                 -out dist/gcode_gen-${{ env.RELEASE_VERSION }}-x64.msi
+                 -out dist\gcode_gen-${{ env.RELEASE_VERSION }}-x64.msi
 
-    # ------------------------------
-    # 7. Save MSI as workflow artifact
-    # ------------------------------
+    # ----------------------------------------------------------
+    # 7. Upload MSI as artifact (always)
+    # ----------------------------------------------------------
     - name: Upload artifact
       uses: actions/upload-artifact@v4
       with:
         name: gcode_gen-msi
-        path: dist/*.msi
+        path: dist\*.msi
 
-    # ------------------------------
-    # 8. Create / update GitHub Release (only for tag or manual)
-    # ------------------------------
+    # ----------------------------------------------------------
+    # 8. Create / update GitHub Release (tag or manual only)
+    # ----------------------------------------------------------
     - name: Publish GitHub release
       if: github.event_name == 'workflow_dispatch' || startsWith(github.ref, 'refs/tags/')
       uses: softprops/action-gh-release@v2
@@ -97,4 +99,4 @@ jobs:
         name: gcode_gen ${{ env.RELEASE_VERSION }}
         generate_release_notes: true
         files: |
-          dist/gcode_gen-${{ env.RELEASE_VERSION }}-x64.msi
+          dist\gcode_gen-${{ env.RELEASE_VERSION }}-x64.msi
