--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,8 +2,8 @@ name: Build & Release (Windows MSI)
 
 on:
   push:
-    branches: [main]      # build every commit to main
-    tags:     ['*']       # build every tag (e.g. v1.4.0)
+    branches: [main]
+    tags:     ['*']
   workflow_dispatch:
     inputs:
       version:
@@ -13,15 +13,14 @@ on:
 
 permissions:
   contents: read
-  packages: read          # handy if you later push/pull GHCR images
+  packages: read
 
 jobs:
   msi:
     runs-on: windows-latest
 
-    # Single place to resolve the version string we’ll use everywhere
     env:
-      RELEASE_VERSION: >-
+      RAW_VERSION: >-
         ${{ github.event_name == 'workflow_dispatch'
             && inputs.version
             || startsWith(github.ref, 'refs/tags/')
@@ -30,18 +29,15 @@ jobs:
 
     steps:
     # ----------------------------------------------------------
-    # 1. Check out the source
+    # 0. Check out source
     # ----------------------------------------------------------
     - uses: actions/checkout@v4
 
     # ----------------------------------------------------------
-    # 2. MSBuild / toolchain for CMake
+    # 1. Prepare MSBuild / CMake
     # ----------------------------------------------------------
     - uses: microsoft/setup-msbuild@v1.1
 
-    # ----------------------------------------------------------
-    # 3. Configure & build gcode_gen.exe
-    # ----------------------------------------------------------
     - name: Configure CMake
       shell: pwsh
       run: cmake -B build -DCMAKE_BUILD_TYPE=Release
@@ -51,7 +47,30 @@ jobs:
       run: cmake --build build --config Release
 
     # ----------------------------------------------------------
-    # 4. Prepare dist folder (robust)
+    # 2. Compute WiX-safe version
+    # ----------------------------------------------------------
+    - name: Compute version
+      id: ver
+      shell: pwsh
+      run: |
+        $raw = "${{ env.RAW_VERSION }}"
+
+        # Strip leading 'refs/tags/' and optional 'v'
+        if ($raw -match '^refs/tags/(.+)') { $raw = $Matches[1] }
+        if ($raw.StartsWith('v')) { $raw = $raw.Substring(1) }
+
+        # Regex for WiX-acceptable SemVer (very close approximation)
+        $isSemVer = $raw -match '^\d+\.\d+\.\d+(\.\d+)?(-[0-9A-Za-z\-\.]+(\.\d+)?)?$'
+
+        if (-not $isSemVer) {
+          $run = "${{ github.run_number }}"
+          $raw = "0.0.$run.0"
+        }
+
+        echo "safe=$raw" >> $env:GITHUB_OUTPUT
+
+    # ----------------------------------------------------------
+    # 3. Prepare dist folder
     # ----------------------------------------------------------
     - name: Prepare dist folder
       shell: pwsh
@@ -60,29 +79,29 @@ jobs:
         New-Item -ItemType Directory -Path dist | Out-Null
 
     # ----------------------------------------------------------
-    # 5. Install WiX v4 CLI
+    # 4. Install WiX CLI
     # ----------------------------------------------------------
     - name: Install WiX Toolset
       shell: pwsh
       run: dotnet tool install --global wix --version 4.*
 
     # ----------------------------------------------------------
-    # 6. Build the MSI  (correct -d "Name=Value" syntax)
+    # 5. Build MSI
     # ----------------------------------------------------------
     - name: Pack MSI
       shell: pwsh
       run: |
-        $buildDir = "${{ github.workspace }}\build\src\gcode_gen\Release"
-        $version  = "${{ env.RELEASE_VERSION }}"
+        $buildDir  = "${{ github.workspace }}\build\src\gcode_gen\Release"
+        $version   = "${{ steps.ver.outputs.safe }}"
 
         wix build wix\installer.wxs `
-                 -arch x64 `
-                 -d "Version=$version" `
-                 -d "BuildDir=$buildDir" `
-                 -out "dist\gcode_gen-$version-x64.msi"
+            -arch x64 `
+            -d "Version=$version" `
+            -d "BuildDir=$buildDir" `
+            -out "dist\gcode_gen-$version-x64.msi"
 
     # ----------------------------------------------------------
-    # 7. Upload MSI as workflow artifact (always)
+    # 6. Upload artifact
     # ----------------------------------------------------------
     - name: Upload artifact
       uses: actions/upload-artifact@v4
@@ -91,14 +110,14 @@ jobs:
         path: dist\*.msi
 
     # ----------------------------------------------------------
-    # 8. Create / update GitHub Release (tag or manual only)
+    # 7. Publish GitHub Release (tag or manual)
     # ----------------------------------------------------------
     - name: Publish GitHub release
       if: github.event_name == 'workflow_dispatch' || startsWith(github.ref, 'refs/tags/')
       uses: softprops/action-gh-release@v2
       with:
-        tag_name: ${{ env.RELEASE_VERSION }}
-        name: gcode_gen ${{ env.RELEASE_VERSION }}
+        tag_name: ${{ steps.ver.outputs.safe }}
+        name: gcode_gen ${{ steps.ver.outputs.safe }}
         generate_release_notes: true
         files: |
-          dist\gcode_gen-${{ env.RELEASE_VERSION }}-x64.msi
+          dist\gcode_gen-${{ steps.ver.outputs.safe }}-x64.msi
