--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,7 +18,6 @@ permissions:
 jobs:
   msi:
     runs-on: windows-latest
-
     env:
       RAW_VERSION: >-
         ${{ github.event_name == 'workflow_dispatch'
@@ -39,7 +38,7 @@ jobs:
       shell: pwsh
       run: cmake --build build --config Release
 
-    # ----------------------- Sanitize version ------------------------
+    # ----- Sanitize version so WiX accepts it --------------------------
     - name: Compute version
       id: ver
       shell: pwsh
@@ -47,34 +46,49 @@ jobs:
         $raw = "${{ env.RAW_VERSION }}"
         if ($raw -match '^refs/tags/(.+)') { $raw = $Matches[1] }
         if ($raw.StartsWith('v')) { $raw = $raw.Substring(1) }
-        $isOK = $raw -match '^\d+\.\d+\.\d+(\.\d+)?(-[0-9A-Za-z\-.]+(\.\d+)?)?$'
-        if (-not $isOK) { $raw = "0.0.${{ github.run_number }}.0" }
+        $ok = $raw -match '^\d+\.\d+\.\d+(\.\d+)?(-[0-9A-Za-z\-.]+(\.\d+)?)?$'
+        if (-not $ok) { $raw = "0.0.${{ github.run_number }}.0" }
         echo "safe=$raw" >> $env:GITHUB_OUTPUT
 
-    - name: Prep dist
+    - name: Prepare dist folder
       shell: pwsh
       run: |
         Remove-Item -Recurse -Force dist -ErrorAction SilentlyContinue
         New-Item -ItemType Directory -Path dist | Out-Null
 
-    - name: Install WiX
+    # ---------------- Install WiX + Harvest extension -----------------
+    - name: Install WiX CLI
       shell: pwsh
-      run: dotnet tool install --global wix --version 4.*
+      run: |
+        dotnet tool install --global wix --version 4.*
+        wix extension add WixToolset.Harvest
 
-    # ----------------------- Build MSI -------------------------------
+    # ---------------- Harvest every file in Release -------------------
+    - name: Harvest build output
+      shell: pwsh
+      run: |
+        $buildDir = "${{ github.workspace }}\build\src\gcode_gen\Release"
+        wix harvest directory `
+          -var BuildDir `
+          -id BuildOutput `
+          -cg BuildComponents `
+          -dr PRODUCTDIR `
+          -o build_files.wxs `
+          $buildDir
+
+    # ---------------- Build the MSI -----------------------------------
     - name: Pack MSI
       shell: pwsh
       run: |
         $buildDir = "${{ github.workspace }}\build\src\gcode_gen\Release"
         $version  = "${{ steps.ver.outputs.safe }}"
-        wix build wix\installer.wxs `
+        wix build wix\installer.wxs build_files.wxs `
             -arch x64 `
             -d "Version=$version" `
             -d "BuildDir=$buildDir" `
             -out "dist\gcode_gen-$version-x64.msi"
 
-    - name: Upload artifact
-      uses: actions/upload-artifact@v4
+    - uses: actions/upload-artifact@v4
       with:
         name: gcode_gen-msi
         path: dist\*.msi
@@ -88,3 +102,4 @@ jobs:
         generate_release_notes: true
         files: |
           dist\gcode_gen-${{ steps.ver.outputs.safe }}-x64.msi
+
