Add advanced gcode writer and tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,3 +28,11 @@ if(BUILD_GUI)
 endif()
 
 add_subdirectory(src/gcode_gen)
+
+add_executable(unit_tests
+  tests/test_absolute.cpp
+  tests/test_subprog.cpp
+  tests/main.cpp
+)
+target_link_libraries(unit_tests PRIVATE gcode_utils)
+add_test(NAME unit_tests COMMAND unit_tests)
